--- a/05-adding-some-context/projects/final/Journalyst/Journalyst/Base.lproj/Main.storyboard
+++ b/05-adding-some-context/projects/final/Journalyst/Journalyst/Base.lproj/Main.storyboard
@@ -118,14 +118,14 @@
                             <tableViewSection headerTitle="Journalyst Entry" id="ZmG-1q-MBh">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="LogTableViewCell" rowHeight="313" id="dkR-fH-1nh">
-                                        <rect key="frame" x="0.0" y="55.333332061767578" width="414" height="313"/>
+                                        <rect key="frame" x="20" y="55.333332061767578" width="374" height="313"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dkR-fH-1nh" id="lZK-7K-3tr">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="313"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="313"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="interactive" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Fh1-pA-OuZ">
-                                                    <rect key="frame" x="8" y="8" width="358" height="297"/>
+                                                    <rect key="frame" x="8" y="8" width="398" height="297"/>
                                                     <color key="tintColor" systemColor="linkColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -147,14 +147,14 @@
                             <tableViewSection headerTitle="Images" id="iIC-cH-xJT">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageTableViewCell" rowHeight="81" id="llc-5e-pfB">
-                                        <rect key="frame" x="0.0" y="424.33333206176758" width="414" height="81"/>
+                                        <rect key="frame" x="20" y="424.33333206176758" width="374" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="llc-5e-pfB" id="f4M-kZ-F20">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="81"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="81"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lf5-vg-hZ2">
-                                                    <rect key="frame" x="8" y="8" width="358" height="65"/>
+                                                    <rect key="frame" x="20" y="11" width="334" height="59"/>
                                                     <color key="backgroundColor" systemColor="tableCellGroupedBackgroundColor"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hHL-jP-GOh">
                                                         <size key="itemSize" width="60" height="59"/>
@@ -164,14 +164,14 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCollectionViewCell" id="bWV-fL-7MO" customClass="ImageCollectionViewCell" customModule="Journalyst" customModuleProvider="target">
-                                                            <rect key="frame" x="70" y="3" width="60" height="59"/>
+                                                            <rect key="frame" x="70" y="0.0" width="60" height="59"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="UNZ-Bu-z2S">
                                                                 <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
                                                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cEU-kZ-yuu">
-                                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
+                                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="60" id="TQy-wI-5zj"/>
                                                                             <constraint firstAttribute="height" constant="60" id="p2r-EQ-iai"/>
@@ -181,8 +181,6 @@
                                                                 <constraints>
                                                                     <constraint firstItem="cEU-kZ-yuu" firstAttribute="leading" secondItem="UNZ-Bu-z2S" secondAttribute="leading" id="bJN-hR-cGw"/>
                                                                     <constraint firstItem="cEU-kZ-yuu" firstAttribute="top" secondItem="UNZ-Bu-z2S" secondAttribute="top" id="f5o-P4-tR0"/>
-                                                                    <constraint firstAttribute="bottom" secondItem="cEU-kZ-yuu" secondAttribute="bottom" id="mUD-6G-s13"/>
-                                                                    <constraint firstAttribute="trailing" secondItem="cEU-kZ-yuu" secondAttribute="trailing" id="wWU-0O-UXj"/>
                                                                 </constraints>
                                                                 <userDefinedRuntimeAttributes>
                                                                     <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -202,11 +200,11 @@
                                                         </collectionViewCell>
                                                     </cells>
                                                     <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Header" id="Bcj-Ra-NCr">
-                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="65"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
                                                         <autoresizingMask key="autoresizingMask"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VKs-z7-vDH">
-                                                                <rect key="frame" x="0.0" y="0.0" width="60" height="65"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
                                                                 <state key="normal" image="camera.fill" catalog="system"/>
                                                                 <connections>
                                                                     <action selector="addImage:" destination="UBb-5P-Arc" eventType="touchUpInside" id="pDs-4V-OHe"/>
@@ -301,7 +299,7 @@
         <!--Root Split View Controller-->
         <scene sceneID="ozZ-oo-MFS">
             <objects>
-                <splitViewController id="I9n-eb-4DL" customClass="RootSplitViewController" customModule="Journalyst" customModuleProvider="target" sceneMemberID="viewController">
+                <splitViewController allowDoubleColumnStyle="YES" id="I9n-eb-4DL" customClass="RootSplitViewController" customModule="Journalyst" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
                         <segue destination="3IV-oh-ol2" kind="relationship" relationship="masterViewController" id="cZY-5h-ZfP"/>
                         <segue destination="NE0-ZR-lcj" kind="relationship" relationship="detailViewController" id="LRu-gI-zz3"/>
@@ -313,7 +311,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="xv8-Jc-nAm"/>
+        <segue reference="LRu-gI-zz3"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="PrimaryTint"/>
     <resources>
