--- a/03-drag-and-drop/projects/final/Journalyst/Base.lproj/Main.storyboard
+++ b/03-drag-and-drop/projects/final/Journalyst/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17147" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I9n-eb-4DL">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I9n-eb-4DL">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17120"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17124"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -293,7 +293,7 @@
         <!--Split View Controller-->
         <scene sceneID="ozZ-oo-MFS">
             <objects>
-                <splitViewController id="I9n-eb-4DL" sceneMemberID="viewController">
+                <splitViewController allowDoubleColumnStyle="YES" id="I9n-eb-4DL" sceneMemberID="viewController">
                     <connections>
                         <segue destination="3IV-oh-ol2" kind="relationship" relationship="masterViewController" id="cZY-5h-ZfP"/>
                         <segue destination="NE0-ZR-lcj" kind="relationship" relationship="detailViewController" id="LRu-gI-zz3"/>
